Исправление проваленного теста 2

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 
 <body class="page">
-	<section class="header">
+	<header class="header">
 		<img class="header__logo" src="./images/header-logo.svg" alt="Лого">
 		<ul class="header__links">
 			<li><a class="header__lang-link header__lang-link_active" href="#">Ru</a></li>
 			<li><a class="header__lang-link" href="#">En</a></li>
 		</ul>
-	</section>
+	</header>
 	<main class="content">
 		<section class="lead">
 			<h1 class="lead__title">Путешествия по России</h1>
@@ -45,7 +45,7 @@
 				<li>Аэропортов <span class="intro__span">241</span></li>
 			</ul>
 		</section>
-		<section class="photo-grid">
+		<div class="photo-grid">
 			<img src="./images/photo-grid-train.jpg" alt="Поезд" class="photo-grid__item">
 			<img src="./images/photo-grid-atharva-tulsi.jpg" alt="Атарва Тулси" class="photo-grid__item">
 			<img src="./images/photo-grid-tuman.jpg" alt="Человек" class="photo-grid__item">
@@ -58,7 +58,7 @@
 			<img src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатка-2" class="photo-grid__item">
 			<img src="./images/photo-grid-baikal-2.jpg" alt="Байкал-2" class="photo-grid__item">
 			<img src="./images/photo-grid-ergaki.jpg" alt="Ергаки" class="photo-grid__item">
-		</section>
+		</div>
 		<section class="places">
 			<div class="place">
 				<h3 class="place__title">Куршская коса</h3>
@@ -174,7 +174,7 @@
 			</a>
 		</section>
 	</main>
-	<section class="footer">
+	<footer class="footer">
 		<ul class="footer__links">
 			<li><a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a></li>
 			<li><a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a></li>
@@ -183,7 +183,7 @@
 			<li><a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a></li>
 		</ul>
 		<p class="footer__copyright">&#169 2022. Сулейманов Иса</p>
-	</section>
+	</footer>
 </body>
 
 </html>
