--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 			<li><a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a></li>
 			<li><a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a></li>
 		</ul>
-		<p class="footer__copyright">&#169 2022. Сулейманов Иса</p>
+		<p class="footer__copyright">©&nbsp;2022.&nbsp;Сулейманов&nbsp;Иса</p>
 	</footer>
 </body>
 
