--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 						Алтайского края.</p>
 				</div>
 			</div>
-			<div class="place">
+			<section class="place">
 				<h3 class="place__title">Зимний Байкал</h3>
 				<div class="place__website">
 					<p class="place__url-heading">URL</p>
@@ -144,9 +144,9 @@
 						«Байкальская
 						миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
 				</div>
-			</div>
-			<div class="place">
-				<h3 class="place__title">Карелия</h3>
+			</section>
+			<article class="place">
+				<h2 class="place__title">Карелия</h2>
 				<div class="place__website">
 					<p class="place__url-heading">URL</p>
 					<a href="http://vodlozero.ru" target="_blank" class="place__link">http://vodlozero.ru/</a>
@@ -155,7 +155,8 @@
 				<div class="place__paragraphs">
 					<p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
 						лиственница не растёт западнее Водлозера. Зато
-						здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не
+						здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда
+						не
 						знали
 						топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце
 						раньше, чем
@@ -163,7 +164,7 @@
 						В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
 						в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
 				</div>
-			</div>
+			</article>
 		</section>
 		<section class="cover">
 			<a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__background">
@@ -175,13 +176,13 @@
 		</section>
 	</main>
 	<footer class="footer">
-		<ul class="footer__links">
-			<li><a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a></li>
-			<li><a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a></li>
-			<li><a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a></li>
-			<li><a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a></li>
-			<li><a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a></li>
-		</ul>
+		<nav class="footer__links">
+			<a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a>
+			<a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a>
+			<a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a>
+			<a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a>
+			<a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a>
+		</nav>
 		<p class="footer__copyright">©&nbsp;2022.&nbsp;Сулейманов&nbsp;Иса</p>
 	</footer>
 </body>
